...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signup"
        android:layout_width="216dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="Sign Up"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <EditText
        android:id="@+id/SignupEmail"
        android:layout_width="208dp"
        android:layout_height="82dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textIsSelectable="true"
...
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/SignupPassword"
        android:layout_width="216dp"
        android:layout_height="77dp"
        android:ems="10"
        android:hint="SignupPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788">

        <RadioButton
            android:id="@+id/SignUp_Publisher"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Publisher"
            android:textSize="30sp" />

        <RadioButton
...
            android:text="User"
            android:textSize="30sp" />

    </RadioGroup>

    <Button
        android:id="@+id/SignupSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#33FFFFFF"
        android:onClick="onSubmit"
        android:text="Submit"
        android:visibility="visible"
...
