<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserEventList">

    <LinearLayout
        android:id="@+id/userLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light"
        android:orientation="vertical"
        android:paddingBottom="600dp">

        <TextView
            android:id="@+id/eventlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="Dashboard"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Pub_Dash_Intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Our Events:(sorted by event time)"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>