...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <TextView
        android:id="@+id/follow"
        android:layout_width="340dp"
        android:layout_height="129dp"
        android:gravity="center"
        android:text="Following"
        android:textSize="36sp"
        android:textStyle="bold"
...
