...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".LogInActivity" >

    <TextView
        android:id="@+id/loginSymbol"
        android:layout_width="216dp"
        android:layout_height="80dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="Log In "
        android:textColor="@android:color/secondary_text_light"
...
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <EditText
        android:id="@+id/LogIn_email"
        android:layout_width="228dp"
        android:layout_height="81dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textIsSelectable="true"
...
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginSymbol"
        app:layout_constraintVertical_bias="0.107" />

    <EditText
        android:id="@+id/LogIn_password"
        android:layout_width="216dp"
        android:layout_height="77dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788">

        <RadioButton
            android:id="@+id/LogIn_Publisher"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Publisher"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="30sp" />

...
            android:text="User"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="30sp" />
    </RadioGroup>

    <Button
        android:id="@+id/LogIn_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#33FFFFFF"
        android:onClick="onLogin"
        android:text="Submit"
        android:visibility="visible"
...
